# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xGthuDOxtIka3lKuPZA0j7MV_pbRCjh2cVvdgdASyh9A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1UR0JVLtvpxPNQBz2SOnBUGAzXy4Rkk5JkkqgCjUQNmU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1Y1bfzTSU8sogAVzYIEKlwEQF8lWX4l5rTGSj7Se-IX8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xB_53nsGTYBaUCfEoshiFOEgHks5-StlRmJ_K-Sp35-I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1ygSNoAciOfmGJsS3KKUy5tFWsG3dcXkdqL3IHWXzgNw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1aG8btNtNzwuzCvECfWF_rd0xsTg_9jvrbF8lLF9-IhE=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1Zd0Ar-kHlC2x2s1now-yiKWSto5JuGMrSmdNpRHbKz4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT242wlgmDdSk2tpEULDPjqfKtfjdfoSPZI5cW5agdnRQ0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT25vZh-tK3_RsLhXC-rGLOnFISCDUsrlqhAsPI7COtrUw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT26hgQhMzJ5voXUxNb-MAOX-NVp-tNwG5l7v3Vc8aPi5w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2GyHFdqPyJyAlI1BDY3gBV-jenbp2B5SQlPXZxIHatWg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2TYoOv4QQDRtZexvcZXietUYiCMJ3MIclb3ecuDyanTE=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT14WPX3ImzA8LUVaIQhcXtjL-pqVXg5H5iQATQhfaMWMY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT17_nF4YZ7-QmXWvK5Imgpch6xMLsMCaLbDqguyLmcVFA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1GSCvgE2WGEGjQY_40JQMQIpW6pOrr8Ay8Oi0oEDj9zU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1J1N-bZPNqUOLRGiNQDaumgion4kLarfvrDlaa4b5-Ls=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1VjioT5mYHcj625E1p1oa37-6do3ImrvvtdkUFKeCBvE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1aCspR-2yZwJa8QtYIOkLks2_W05lUwQSFo6-yjMlv1E=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1o2aTMq5ncMR6dZghyd4bTuBRZjpg18Q6B1GJ7UkOyg0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64N6GTI5Fre9TFVrmEolajkbZ4xZFdneXdf_QC6-uI9rQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64wZ50zIG26Ro3T30ZLL8YvHOV-RvYmloWNC5ir9W_Rjw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x11YTgjBRpbB3g8maq1tr8aSW4euWf42GTj1ErDfzg4H8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x11h4rC3og5HkBwb_9Hw5-0gGf-Ti4Tukn0DVIn-P9sNk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1FS9SuBtRENybQJYEhK8pDrLrnn4CKBE8lv_fqjXnjGs=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2RbHID4ny0wsspMwD21AxS4wH2-voQmywk9UoQKiNbpA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2zT2uasrzGZGspSGL-mHm0bw-TQxzKlGNVYClYT8b6ow=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3mLB-NHTzRF5hn4URMTiV7mfJitXzVNAUIRfSOlCu6ug=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32u5eYkYqdy-4ShzOjmB-H0L-H0tnw6Nbmm0bPpi-nll4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32usj57CgILo_ggADXDu6bBrbA22h3V-8Ud6EtHLYUPGM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32y8y24CCTeQLdFanVszsof1fEzmxWLPVn5ruliXfNkEo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32-OfU2EkCv8GbNANfHpXxavN7FHzrx5WK0_m0Kh6Y9VA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xNsHb3BDUowmRt4qOk5JJKMCzOfk5_W57mpzz1gCQbhE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32x_2JM6EwdkiwwSyCEgGoE1rKpMPi6ptzfKuyAd00fQiU=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1-dvGfr9dbQmdGzCnpiYH2kZoABVA0JgwR1Gs7NDRijg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT12Pn66oh8Pq9nAXpV5BD_ewbzyDKkWHr0fYdmpZhtFsk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT14etv9eOWUgrPOiVhWIhnKgd9jzsw_Zkv0GFbSQTrgR0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1VIMlkQ7ZAXMJ_N9KrTLAjrcvnNHv6QRNNtuJWiWlul4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1Vd1PZsFjgSR-LGQ1YMxHH50kWhMKLtLXPEo1hoAPH8A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1ZCY1H72UOJ7c_wINyRPz8vRuebIGTa15SffLIyB-X40=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1wc0t3UBkiUFrC9-iNMDJrbPhPXDb8IGzgRTawk6US5E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1ymSXcI9U7sC7fzxc8-ZVCSpuVWPTvWHdS4OYfYAPwV8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3IHI2ZQ7WPjrmu1ilkUOfJNsExdSAap7HULh-caSNq3E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3gA9osHNXe_yFs5pMsawD22QybMvfd37V7nGuiMWyGYQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4HvOAlK7hfTU72Lk8kJazYnw3QW2QhpDxSnTUU3W3bcY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4fXwuiNGV8iPMA5AmLsoymniLzy8wa0f1bJPNGQa9B2U=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16weK0UbR8uKcRlnDVSSyXwVPHwsWu6X8REybuS_qTd9A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16-2ubbXXJa2HEVHVvlY_PTFYembFJMXNX_pX5BHBLCYc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16_M87k5kFvuaaiJHS8f7facCKCo4Kybg1-UWcDHckFIg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16wLW5_nSedP5ubKiBad4gAYO0dznInpSdzFCVXL81MDA=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16e9P8c7_agLfxL4nnX07uUmMldmgeuzkDkozeB0OPxEQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16CZ6C3Dnp1OOcbyegoGFqUjKkcgmwflp5mj_C_0FzilY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16Sm5p4T1Pc0bJToBm00wQiCZ1yY3tCJjLhYtRlF_Jgww=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16vGop3Q3wXFtTDCgOOmmgNZ-AQQr27SS3EVjPZuQFH2M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16gHKh2rQ2WcG_DezrLC0rqsE5JpoRGVqMZ6wAuyLQONk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16B7B31m6f5PKVpKYWHCoJaQ4bPhnxxRaOJ362lEyR4o4=',
      'err': 0,
    }),
  ])
# ---
